------------------

- Altered table of contents javascript so that comments are not displayed.
  [dbfrombrc]

- "Event when" improved for better i18n.  
   This closes http://dev.plone.org/plone/ticket/10196
   [gotcha]

- Nested groups appear again in prefs_group_members. This was broken since
  Plone 3.3.2. This closes http://dev.plone.org/plone/ticket/10075
  [vincentfretin]


3.3.5 - March 3rd, 2010
-----------------------

- Check for existance of a hash in the location before attempting to scroll to
  that location in toc.js. Fixes bug introduced in r32066, and refs
  http://dev.plone.org/plone/ticket/9364
  [dunlapm]

- default_error_message page adds the error code in the subject
  of the contact-info page
  This closes http://dev.plone.org/plone/ticket/8446
  [huub_bouma, kcleong]


3.3.4 - January 14th, 2010
--------------------------

- Avoid leading spaces in the class attribute of the body element.
  Refs http://dev.plone.org/plone/ticket/9489.
  [dukebody]

- member_search_results display login names only if the user
  has "List portal members" permission.
  Return "not allowed" message and empty search results if not.
  This fixes http://dev.plone.org/plone/ticket/9923
  [khink]

- In the MockMailHostTestCase register and unregister the mock mail
  host as an IMailHost.  Fixes a test failure in PasswordResetTool
  (once I let that use this test case).  Change taken over from Plone
  trunk.
  [maurits]

- Do not display the author contact form when the author has no email
  (for example for openid users).
  Refs http://dev.plone.org/plone/ticket/8707
  [maurits]


3.3.3 - December 8, 2009
------------------------

- Don't add a .zem extension for the external editor except on OS X. This
  closes http://dev.plone.org/plone/ticket/9888
  [tbenita, davisagli]

- Added tal condition to check if the user object is None when rendering
  pref_group_members.cpt since group assignments are not deleted when
  a user is deleted.